gap issue solve

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,13 @@
 body{
     font-family: "Raleway", sans-serif;
 }
-h1,h4{
+h1{
     font-weight: 800;
     font-size: 4rem;
+}
+h4{
+    font-weight: 800;
+    font-size: 2.5rem;
 }
 .background-overlay {
     background-color: #FFFFFF00;
@@ -146,9 +150,16 @@ border-radius: 50px;
     height: 100px;
     width: 100%;
 }
+.theme-text{
+    color: #4CCA8D !important;
+    font-weight: bolder;
+}
 @media (max-width: 1024px) {
     h1{
         font-size: 2.5rem;
+    }
+    h4{
+        font-size: 2rem;
     }
     .hero-section p{
         line-height: 1.4rem;
